test/files/neg/t8525.check
t8525.scala:9: warning: adapted the argument list to the expected 2-tuple: add additional parens instead
        signature: X.f(p: (Int, Int)): Int
  given arguments: 3, 4
 after adaptation: X.f((3, 4): (Int, Int))
  def g = f(3, 4)       // adapted
           ^
t8525.scala:11: warning: private[this] value name in class X shadows mutable name inherited from class Named.  Changes to name will not be visible within class X - you may want to give them distinct names.
  override def toString = name // shadowing mutable var name
                          ^
t8525.scala:10: warning: side-effecting nullary methods are discouraged: suggest defining as `def u()` instead
  def u: Unit = ()      // unitarian universalist
      ^
error: No warnings can be incurred under -Werror.
3 warnings
1 error
